[gd_scene load_steps=4 format=2]

[ext_resource path="res://WorldMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://player/RatPlayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="WorldMap" parent="." instance=ExtResource( 1 )]

[node name="RatPlayer" parent="." instance=ExtResource( 2 )]

[node name="UI" type="CanvasLayer" parent="."]

[node name="In-game" type="Panel" parent="UI"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -626.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="Label" parent="UI/In-game"]
margin_right = 130.0
margin_bottom = 14.0
text = "mushrooms left: ##"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="UI/In-game"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -163.0
margin_bottom = 14.0
text = "mushrooms gathered: ##"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Panel" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YouLose" type="Label" parent="UI/GameOver"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -31.0
margin_top = -7.0
margin_right = 31.0
margin_bottom = 7.0
text = "you lose !"
align = 1
valign = 1

[node name="Restart" type="Button" parent="UI/GameOver"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -27.0
margin_top = 16.4285
margin_right = 27.0
margin_bottom = 36.4285
text = "restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YouWin" type="Label" parent="UI/GameOver"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -28.5
margin_top = -7.0
margin_right = 28.5
margin_bottom = 7.0
text = "you win !"
align = 1
valign = 1

[connection signal="pressed" from="UI/GameOver/Restart" to="." method="_on_Restart_pressed"]
